# golf-booker-rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-css.mjs  docker-compose.yml  fixes-todos.md  justfile  package.json
.github/workflows/: ci.yml
assets/: styles.css
assets/css/: app.css  tokens.css  tokens.dark.css
docs/: DEPLOY.md  PLAN.md  STYLE.md
migrations/: 0001_init.sql  0002_user_email_and_reset.sql
src/: clubs.rs  config.rs  db.rs  email.rs  error.rs  main.rs  test_support.rs  users.rs
src/golf/: client.rs  mod.rs
src/golf/schemas/: booking_event.rs  booking_group.rs  event.rs  mod.rs
src/scheduler/: mod.rs
src/web/: app.rs  auth.rs  clubs.rs  events.rs  jobs.rs  mod.rs  protected.rs  ratelimit.rs  render.rs  tests.rs  users.rs
tailscale/: Dockerfile
templates/: base.html  forgot.html  home.html  login.html  reset.html
templates/clubs/: edit.html  list.html
templates/events/: detail.html  list.html  schedule.html
templates/jobs/: list.html
templates/partials/: header.html
templates/users/: list.html
