[package]
name = "golf-booker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = "0.8"
axum-login = "0.18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Persistence
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "macros", "migrate"] }

# Golf club HTTP client
reqwest = { version = "0.13", features = ["cookies", "json"] }
reqwest_cookie_store = "0.10"
quick-xml = { version = "0.40", features = ["serialize"] }

# Auth
password-auth = "1"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Errors / logging / misc
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html-escape = "0.2"
async-trait = "0.1"
